objects/EnergyProductionYr1__c.object
<CustomObject>
    <description>Aurora- A new object to capture energy production for the first year. This will contain monthly, annual or attachment to hourly energy production estimates from Aurora for year 1. Actual design will also use this object. Quote year 1 will also populate first year production in this field.</description>
    <fields>
        <fullName>Annual__c</fullName>
        <description>Auorora- Field to capture annual energy production</description>
        <label>Annual</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr__c</fullName>
        <description>Aurora:Field to capture April Production</description>
        <label>Apr</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug__c</fullName>
        <description>Aurora: Field to capture Aug month Production</description>
        <label>Aug</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec__c</fullName>
        <description>Aurora: Field to capture December month Production</description>
        <label>Dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Commercial: 
Lookup to design so that manual entry production data can be entered by GBFS team from alternate simulation than Aurora 
PO: Miltiadis Vratimos 
PPA Proposal Project: https://www.pivotaltracker.com/epic/show/3273633 
Target Release: WW18 - 2017</description>
        <label>Design</label>
        <referenceTo>Design__c</referenceTo>
        <relationshipLabel>Energy Productions Year1</relationshipLabel>
        <relationshipName>Energy_Productions_Year1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feb__c</fullName>
        <description>Aurora:Field to capture February Production</description>
        <label>Feb</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Aurora: Field to capture hourly production. We expect an attachment to the Energy production record that stores every hour of the year. This will be checked to yes after and attachment is linked.This could be used for reporting purposes.</description>
        <label>Hourly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jan__c</fullName>
        <description>Aurora: Capture January Energy Production</description>
        <label>Jan</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul__c</fullName>
        <description>Aurora:Field to capture July Production</description>
        <label>Jul</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun__c</fullName>
        <description>Aurora:Field to capture June Production</description>
        <label>Jun</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mar__c</fullName>
        <description>Aurora:Field to capture March Production</description>
        <label>Mar</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May__c</fullName>
        <description>Aurora:Field to capture May Production</description>
        <label>May</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov__c</fullName>
        <description>Aurora: Field to capture Nov month Production</description>
        <label>Nov</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct__c</fullName>
        <description>Aurora: Field to capture Oct month Production</description>
        <label>Oct</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoofDesign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Aurora: Lookup to Roof Design to associate the First year Production data</description>
        <label>Roof Design</label>
        <referenceTo>Roof_Design__c</referenceTo>
        <relationshipLabel>Energy Productions Year1</relationshipLabel>
        <relationshipName>Energy_Productions_Year1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sep__c</fullName>
        <description>Aurora: Field to capture Sep month Production</description>
        <label>Sep</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Energy Production Year1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEP-{0000}</displayFormat>
        <label>Energy Production Year1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Productions Year1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>